fixed word-wrap issue

--- a/hw5/socialnetwork/static/socialnetwork/css/blog.css
+++ b/hw5/socialnetwork/static/socialnetwork/css/blog.css
@@ -180,3 +180,8 @@ body {
 {
     color: red;
 }
+
+.notugly
+{
+  word-wrap: break-word;
+}
